Use batch call to get partition information from the metastore